--- a/index.html
+++ b/index.html
@@ -53,11 +53,15 @@
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ!</h3>
+
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
+          </li>
+          <li>
+
           </li>
         </ul>
       </section>
