--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <nav>
       <a href="file:///Users/marianasafiulin/Desktop/GOITEENS/dz4-5.html">WebStudio</a
       >
-      <nav>
       <ul>
         <li><a href="./index.html">Студія</a></li>
         <li>Портфоліо</li>
@@ -65,9 +64,11 @@
       </section>
       <section>
         <h2>Чим ми займаємось</h2>
-        <img src="./images/grafit.jpg" alt="grafit" />
-        <img src="./images/laptop.jpg" alt="laptop" />
-        <img src="./images/color.jpg" alt="color" />
+        <ul> 
+          <li><img src="./images/grafit.jpg" alt="grafit" /></li>
+        <li><img src="./images/laptop.jpg" alt="laptop" /></li>
+       <li> <img src="./images/color.jpg" alt="color" /></li>
+      </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
